sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: '<-' expected but ')' found.
  for(i->0 to size-1){
                    ^DutchFlagAlgo:20: error: illegal start of simple expression
}
^